# personal_development

./: README.md
1. Learning and Notes/: AI.md
2. App Development/a. password_vault/: README.md  app.py  vault.db
2. App Development/b. password_generator_web/: Dockerfile  README.md  index.html  script.js
2. App Development/c. documents_tracker/: README.md  doctrack.db  index.html  setup.sh
2. App Development/d. rss_reader_app/: app.py  setup.sh
WIP/device_dashboard_WIP/: index.html  script.js  styles.css
WIP/internet_speedtest_WIP/: README.md  index.html  package-lock.json  package.json
WIP/investment_summary_WIP/: dashboard.html  login.html
WIP/knowledge_base_WIP/: KB_REF_Gen_Info.html  KB_REF_Gen_Info_Updated.html  KB_WS1_AG.html  index.html
WIP/password_vault_WIP/: README.md  app.js  download_xlsx.sh  index.html  style.css
WIP/personal_vault_WIP/: README.md  index.html
docker/: lamp-server.dockerfile
generative_AI/: Notes.md
password_generator_web/: Dockerfile  README.md  docker-compose.yml  index.html  script.js  styles.css
password_vault/: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  setup.sh  vault.db
rss_reader_app/: requirements.txt  setup.sh
wordlist-generator/: requirements.txt
wordlist_generator/: README.md  pyproject.toml  requirements.txt
wordlist_generator/docs/: usage.md
wordlist_generator/src/scripts/: cli.py
wordlist_generator/src/wordlist_generator/: generator.py  gui.py  main.py  preferences.py  utils.py
wordlist_generator/tests/: test_generator.py  test_preferences.py
(+80 files in other folders)
